show more scale

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,13 +196,13 @@
     transform: rotate(-45deg) translate(8px, 8px);
 }
 .expand {
-    max-height: 0px;
+    /* max-height: 0px; */
     transform: scaleY(0);
     transform-origin: top center;
     transition: 0.4s;
 }
 .show-list {
-    max-height: 100%;
+    /* max-height: 100%; */
     transform: scaleY(100%);
 }
 
