--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,8 +196,8 @@
     transform: rotate(-45deg) translate(8px, 8px);
 }
 .expand {
-    /* max-height: 0px; */
-    /* transform: scaleY(0); */
+    max-height: 0px;
+    transform: scaleY(0);
     transform-origin: top center;
     transition: 0.4s;
 }
